<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_size"
    android:paddingLeft="@dimen/padding_size"
    android:paddingRight="@dimen/padding_size"
    android:paddingTop="@dimen/padding_size"
    tools:context="com.slashiq.slash.onerepmaxcalculator.MainActivity">

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/labels_text_size"
        android:textColor="@color/colorLabel"
  />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textWeight"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/enterWeight"
        android:textSize="@dimen/result_text_size"
        android:gravity="center"
        android:textColor="@color/colorInput"
        />
    <TextView
        android:id="@+id/textReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_reps"
        android:layout_below="@+id/enterWeight"
        android:textSize="@dimen/labels_text_size"
        android:textColor="@color/colorLabel"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textReps"
        android:layout_marginTop="@dimen/padding_size"
        android:layout_centerHorizontal="true"
        android:id="@+id/enterReps"
        android:textSize="@dimen/result_text_size"
        android:gravity="center"
        android:textColor="@color/colorInput"
        />
    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:layout_below="@+id/radioGroup"
        android:textSize="@dimen/labels_text_size"
        android:gravity="center"
        android:textColor="@color/colorError"
        />
    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textError"
        android:text="@string/calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_size"
        android:textSize="@dimen/labels_text_size"
        android:onClick="hideKeyboard"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/colorButtonText"
        />
    <TextView
        android:id="@+id/textOneRepMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimated_one_rep_max"
        android:layout_below="@+id/calculate"
        android:layout_marginTop="@dimen/padding_size"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/labels_text_size"
        android:textColor="@color/colorLabel"
        />
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/textOneRepMax"
        android:layout_marginTop="@dimen/padding_size"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/result_text_size"
        android:textColor="@color/colorResult"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/enterReps"
        android:id="@+id/radioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_BRZYCKI"
            android:id="@+id/radioBRZYCKI"
            android:textColor="@color/colorLabel"
            android:checked="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_EPLEY"
            android:id="@+id/radioEPLEY"
            android:textColor="@color/colorLabel"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_LANDER"
            android:id="@+id/radioLANDER"
            android:textColor="@color/colorLabel"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/algorithm_NSCA"
            android:id="@+id/radioNSCA"
            android:textColor="@color/colorLabel"/>
    </RadioGroup>
</RelativeLayout>
